--- a/Twilio.TaskRouter.nuspec
+++ b/Twilio.TaskRouter.nuspec
@@ -20,7 +20,7 @@
           </group>
           <group targetFramework=".NETFramework4.0">
             <dependency id="Twilio" version="3.8.0-beta" />
-            <dependency id="JWT" version="1.3.2" />
+            <dependency id="JWT.Portable" version="1.0.2-beta" />
           </group>
         </dependencies>
     </metadata>
