--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: csharp
 solution: Twilio.2013.sln
 install:
-  - nuget restore solution-name.sln
+  - nuget restore Twilio.2013.sln
   - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release Twilio.2013.sln
